# dynamic-orchestrator-agent

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRD.md  PROJECT_STATUS.md  QUICK_START.md  README.md  TASKS.md  pyproject.toml
doa_framework/: __init__.py  orchestrator.py  policy.py  rewards.py  structs.py  trainer.py
doa_framework/agents/: __init__.py  base.py  core_agents.py
examples/: api_router_agents.py  api_router_demo.py  api_router_orchestrator.py  comprehensive_demo.py  copy_paste_start.py  custom_agent_example.py  gemini_llm_demo.py  integration_example.py  llm_agents_demo.py  quality_aware_training.py  real_llm_demo.py  run_mvp_training.py  simple_llm_demo.py  simple_start.py  test_api_router.py
tests/: __init__.py  test_basic_functionality.py
