[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "doa-framework"
version = "0.1.0"
description = "Dynamic Orchestrator Agent Framework - Adaptive Multi-Agent LLM Collaboration"
authors = ["DOA Team <team@doa-framework.org>"]
readme = "README.md"
packages = [{include = "doa_framework"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
numpy = "^1.21.0"
dataclasses-json = "^0.6.0"
typing-extensions = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
